--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -11,7 +11,8 @@
     "start": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix & nest build --type-check",
     "migrations:generate": "npm run build && npx mikro-orm migration:create",
-    "migrations:run": "npm run build && npx mikro-orm migration:up"
+    "migrations:run": "npm run build && npx mikro-orm migration:up",
+    "migrations:check": "mikro-orm migration:check"
   },
   "dependencies": {
     "@mikro-orm/better-sqlite": "^5.7.14",
@@ -37,6 +38,7 @@
     "eslint": "^8.42.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "wireit": "^0.10.0"
   }
 }
