feat: base graphql setup for backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "eslint.workingDirectories": [
-        "./server/packages/frontend"
+        "./server/packages/frontend",
+        "./server/packages/backend"
     ]
 }
