--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -15,14 +15,19 @@
     "migrations:check": "mikro-orm migration:check"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.0",
+    "@as-integrations/fastify": "^2.1.0",
     "@mikro-orm/better-sqlite": "^5.7.14",
     "@mikro-orm/cli": "^5.7.14",
     "@mikro-orm/core": "^5.7.14",
     "@mikro-orm/migrations": "^5.7.14",
     "@mikro-orm/nestjs": "^5.2.0",
+    "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/graphql": "^12.0.8",
+    "@nestjs/platform-fastify": "^10.1.3",
+    "graphql": "^16.7.1",
     "nanoid": "^3.3.6",
     "reflect-metadata": "^0.1.13"
   },
@@ -31,7 +36,6 @@
     "@nestjs/schematics": "^10.0.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.73",
-    "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
