--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/server": "^4.9.0",
     "@as-integrations/fastify": "^2.1.0",
+    "@fastify/websocket": "^8.2.0",
     "@mikro-orm/better-sqlite": "^5.7.14",
     "@mikro-orm/cli": "^5.7.14",
     "@mikro-orm/core": "^5.7.14",
@@ -28,8 +29,10 @@
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-fastify": "^10.1.3",
     "graphql": "^16.7.1",
+    "graphql-ws": "^5.14.0",
     "nanoid": "^3.3.6",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^8.0.0-alpha.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -37,6 +40,7 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.73",
     "@types/node": "^20.3.1",
+    "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
