feat: add terminal graph

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "eslint.workingDirectories": [
         "./server/packages/frontend",
         "./server/packages/backend"
-    ]
+    ],
+    "graphql-config.load.rootDir": "./server/packages/frontend"
 }
