fix: turbo codegen task

--- a/server/turbo.json
+++ b/server/turbo.json
@@ -9,6 +9,7 @@
             ]
         },
         "lint": {},
+        "codegen": {},
         "migrations:check": {
             "dependsOn": ["build"]
         },
