--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,5 +27,6 @@ build:
     - npx turbo migrations:check
     - npx turbo codegen
     # Make sure the codegen hasn't introduced any file changes
+    - apk add --no-cache git
     - git status --porcelain
     - git diff-index --quiet HEAD
