--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -26,13 +26,16 @@
     "@mikro-orm/nestjs": "^5.2.0",
     "@mikro-orm/seeder": "^5.7.14",
     "@nestjs/apollo": "^12.0.7",
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-fastify": "^10.1.3",
+    "bullmq": "^4.7.1",
     "graphql": "^16.7.1",
     "graphql-ws": "^5.14.0",
     "nanoid": "^3.3.6",
+    "nodejs-traceroute": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^8.0.0-alpha.10"
   },
