--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -19,6 +19,7 @@
     "@apollo/server": "^4.9.0",
     "@as-integrations/fastify": "^2.1.0",
     "@fastify/websocket": "^8.2.0",
+    "@ipregistry/client": "^4.5.0",
     "@mikro-orm/better-sqlite": "^5.7.14",
     "@mikro-orm/cli": "^5.7.14",
     "@mikro-orm/core": "^5.7.14",
@@ -28,6 +29,7 @@
     "@nestjs/apollo": "^12.0.7",
     "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-fastify": "^10.1.3",
