--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@apollo/server": "^4.9.0",
     "@as-integrations/fastify": "^2.1.0",
+    "@fastify/static": "^6.10.2",
     "@fastify/websocket": "^8.2.0",
     "@ipregistry/client": "^4.5.0",
     "@mikro-orm/better-sqlite": "^5.7.14",
@@ -33,6 +34,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-fastify": "^10.1.3",
+    "@nestjs/serve-static": "^4.0.0",
     "bullmq": "^4.7.1",
     "graphql": "^16.7.1",
     "graphql-ws": "^5.14.0",
