--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -40,6 +40,7 @@
     "graphql-ws": "^5.14.0",
     "nanoid": "^3.3.6",
     "nodejs-traceroute": "^2.0.1",
+    "puppeteer": "^21.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^8.0.0-alpha.10"
   },
