--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -35,9 +35,11 @@
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-fastify": "^10.1.3",
     "@nestjs/serve-static": "^4.0.0",
+    "@types/lodash": "^4.14.197",
     "bullmq": "^4.7.1",
     "graphql": "^16.7.1",
     "graphql-ws": "^5.14.0",
+    "lodash": "^4.17.21",
     "nanoid": "^3.3.6",
     "nodejs-traceroute": "^2.0.1",
     "puppeteer": "^21.1.0",
