--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.8.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/cytoscape": "^3.19.10",
     "@types/dagre": "^0.7.49",
     "@types/node": "20.4.5",
