--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@types/cytoscape": "^3.19.10",
     "@types/dagre": "^0.7.49",
     "@types/node": "20.4.5",
