--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -32,6 +32,7 @@
     "graphql": "^16.7.1",
     "graphql-ws": "^5.14.0",
     "lucide-react": "^0.265.0",
+    "mapbox-gl": "^2.15.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
