--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -48,6 +48,7 @@
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@types/mapbox-gl": "^2.7.13",
     "mini-css-extract-plugin": "^2.7.6",
     "typescript": "^5.1.6"
   }
