--- a/server/packages/frontend/.eslintrc.json
+++ b/server/packages/frontend/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": "next/core-web-vitals",
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "indent": ["error", 4]
+    "indent": ["error", 4],
+    "@typescript-eslint/no-unused-vars": "error"
   }
 }
