--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/cytoscape": "^3.19.10",
     "@types/dagre": "^0.7.49",
     "@types/node": "20.4.5",
+    "@types/psl": "^1.1.0",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@visx/network": "^3.3.0",
@@ -35,12 +36,14 @@
     "mapbox-gl": "^2.15.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
+    "psl": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -49,6 +52,7 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/mapbox-gl": "^2.7.13",
+    "@types/valid-url": "^1.0.4",
     "mini-css-extract-plugin": "^2.7.6",
     "typescript": "^5.1.6"
   }
