--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.265.0",
     "mapbox-gl": "^2.15.0",
     "next": "13.4.12",
+    "pn532.js": "^0.1.18",
     "postcss": "8.4.27",
     "psl": "^1.9.0",
     "react": "18.2.0",
@@ -53,6 +54,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/mapbox-gl": "^2.7.13",
     "@types/valid-url": "^1.0.4",
+    "@types/w3c-web-serial": "^1.0.3",
     "mini-css-extract-plugin": "^2.7.6",
     "typescript": "^5.1.6"
   }
