--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -35,7 +35,7 @@
     "graphql-ws": "^5.14.0",
     "lucide-react": "^0.265.0",
     "mapbox-gl": "^2.15.0",
-    "next": "13.4.12",
+    "next": "^13.5.2",
     "pn532.js": "^0.1.18",
     "postcss": "8.4.27",
     "psl": "^1.9.0",
