feat: show predefined location for internal IPs

--- a/server/packages/frontend/.env.example
+++ b/server/packages/frontend/.env.example
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_DEBUG=
+NEXT_PUBLIC_MAPBOX_TOKEN=
+NEXT_PUBLIC_LOCATION_NAME="Klokgebouw, Eindhoven (NL)"
+NEXT_PUBLIC_LOCATION_LAT=51.448614
+NEXT_PUBLIC_LOCATION_LNG=5.457256
