--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@turf/helpers": "^7.0.0-alpha.2",
+    "@turf/turf": "^7.0.0-alpha.2",
     "@types/cytoscape": "^3.19.10",
     "@types/dagre": "^0.7.49",
     "@types/node": "20.4.5",
