feat: implement default location on back-end

--- a/server/packages/backend/.env.example
+++ b/server/packages/backend/.env.example
@@ -1,1 +1,3 @@
 IPREGISTRY_API_KEY=
+DEFAULT_LOCATION={"continent":{"code":"EU","name":"Europe"},"country":{"code":"NL","name":"Netherlands","city":"Eindhoven"},"latitude":51.448614,"longitude":5.457256}
+DEFAULT_COMPANY=Klokgebouw
