chore: add last bits of documentation before publication

--- a/server/packages/backend/.env.example
+++ b/server/packages/backend/.env.example
@@ -1,3 +1,8 @@
+# Required for retrieving IP metadata. Get your API key here:
+# https://dashboard.ipregistry.co/keys
 IPREGISTRY_API_KEY=
+
+# Since we cannot know where the internal network is located, you must manually
+# specify where the installation if phyiscally located.
 DEFAULT_LOCATION={"continent":{"code":"EU","name":"Europe"},"country":{"code":"NL","name":"Netherlands","city":"Eindhoven"},"latitude":51.448614,"longitude":5.457256}
 DEFAULT_COMPANY=Klokgebouw
