--- a/server/packages/frontend/.env.example
+++ b/server/packages/frontend/.env.example
@@ -1,5 +1,11 @@
+# Set to true, if you want debug information to be displayed on all pages
 NEXT_PUBLIC_DEBUG=
+
+# Your Mapbox API token, retrieve from https://account.mapbox.com/access-tokens/
 NEXT_PUBLIC_MAPBOX_TOKEN=
+
+# Since we cannot know where the internal network is located, you must manually
+# specify where the installation if phyiscally located.
 NEXT_PUBLIC_LOCATION_NAME="Klokgebouw, Eindhoven (NL)"
 NEXT_PUBLIC_LOCATION_LAT=51.448614
 NEXT_PUBLIC_LOCATION_LNG=5.457256
