feat: make website placeholder configurable via .env

--- a/server/packages/frontend/.env.example
+++ b/server/packages/frontend/.env.example
@@ -9,3 +9,6 @@ NEXT_PUBLIC_MAPBOX_TOKEN=
 NEXT_PUBLIC_LOCATION_NAME="Klokgebouw, Eindhoven (NL)"
 NEXT_PUBLIC_LOCATION_LAT=51.448614
 NEXT_PUBLIC_LOCATION_LNG=5.457256
+
+# The default website placeholder that should be shown on the first terminal
+NEXT_PUBLIC_DEFAULT_WEBSITE=ddw.nl
