--- a/server/turbo.json
+++ b/server/turbo.json
@@ -2,6 +2,9 @@
     "$schema": "https://turbo.build/schema.json",
     "pipeline": {
         "build": {
+            "inputs": [
+                ".env"
+            ],
             "outputs": [
                 ".next/**",
                 "!.next/cache/**",
