--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -17,50 +17,51 @@
     "initialize": "rimraf data/packet-run.db && npm run migrations:run && npm run seed && redis-cli KEYS \"bull:default*\" | xargs redis-cli DEL"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.0",
-    "@as-integrations/fastify": "^2.1.0",
-    "@fastify/static": "^6.10.2",
-    "@fastify/websocket": "^8.2.0",
-    "@ipregistry/client": "^4.5.0",
-    "@mikro-orm/better-sqlite": "^5.7.14",
-    "@mikro-orm/cli": "^5.7.14",
-    "@mikro-orm/core": "^5.7.14",
-    "@mikro-orm/migrations": "^5.7.14",
-    "@mikro-orm/nestjs": "^5.2.0",
-    "@mikro-orm/seeder": "^5.7.14",
-    "@nestjs/apollo": "^12.0.7",
-    "@nestjs/bullmq": "^10.0.1",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/graphql": "^12.0.8",
-    "@nestjs/platform-fastify": "^10.1.3",
-    "@nestjs/serve-static": "^4.0.0",
-    "@types/lodash": "^4.14.197",
-    "bullmq": "^4.7.1",
-    "graphql": "^16.7.1",
-    "graphql-ws": "^5.14.0",
+    "@apollo/server": "^4.12.1",
+    "@as-integrations/fastify": "^2.1.1",
+    "@fastify/static": "^8.2.0",
+    "@fastify/websocket": "^11.0.2",
+    "@ipregistry/client": "^6.0.0",
+    "@mikro-orm/better-sqlite": "^6.4.15",
+    "@mikro-orm/cli": "^6.4.15",
+    "@mikro-orm/core": "^6.4.15",
+    "@mikro-orm/nestjs": "^6.1.1",
+    "@mikro-orm/seeder": "^6.4.15",
+    "@nestjs/apollo": "^13.1.0",
+    "@nestjs/bullmq": "^11.0.2",
+    "@nestjs/common": "^11.1.1",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.1",
+    "@nestjs/graphql": "^13.1.0",
+    "@nestjs/platform-fastify": "^11.1.1",
+    "@types/lodash": "^4.17.17",
+    "bullmq": "^5.53.0",
+    "fastify-static": "^4.6.1",
+    "graphql": "^16.11.0",
+    "graphql-ws": "^6.0.5",
     "lodash": "^4.17.21",
-    "nanoid": "^3.3.6",
+    "nanoid": "^3.3.11",
     "nodejs-traceroute": "^2.0.1",
-    "puppeteer": "^21.1.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.1",
-    "rxjs": "^8.0.0-alpha.10"
+    "puppeteer": "^24.9.0",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
+    "rxjs": "^8.0.0-alpha.14"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.73",
-    "@types/node": "^20.3.1",
-    "@types/ws": "^8.5.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "eslint": "^8.42.0",
+    "@mikro-orm/migrations": "^6.4.15",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
+    "@swc/cli": "^0.7.7",
+    "@swc/core": "^1.11.29",
+    "@types/node": "^22.15.21",
+    "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "ajv": "^8.17.1",
+    "eslint": "^9.27.0",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "wireit": "^0.10.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "wireit": "^0.14.12"
   }
 }
