--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -12,54 +12,55 @@
     "codegen": "graphql-codegen --config graphql.config.js"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.6",
-    "@turf/helpers": "^7.0.0-alpha.2",
-    "@turf/turf": "^7.0.0-alpha.2",
-    "@types/cytoscape": "^3.19.10",
-    "@types/dagre": "^0.7.49",
-    "@types/node": "20.4.5",
-    "@types/psl": "^1.1.0",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "@visx/network": "^3.3.0",
-    "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cytoscape": "^3.26.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "framer-motion": "^10.16.4",
-    "graphql": "^16.7.1",
-    "graphql-ws": "^5.14.0",
+    "@apollo/client": "^3.13.8",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@turf/helpers": "^7.2.0",
+    "@turf/turf": "^7.2.0",
+    "@types/cytoscape": "^3.21.9",
+    "@types/dagre": "^0.7.52",
+    "@types/node": "22.15.21",
+    "@types/psl": "^1.1.3",
+    "@types/react": "19.1.5",
+    "@types/react-dom": "19.1.5",
+    "@visx/network": "^3.13.0-alpha.0",
+    "autoprefixer": "10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cytoscape": "^3.32.0",
+    "eslint": "9.27.0",
+    "eslint-config-next": "15.1.8",
+    "framer-motion": "^12.12.1",
+    "graphql": "^16.11.0",
+    "graphql-ws": "5.14",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.265.0",
-    "mapbox-gl": "^2.15.0",
-    "next": "^13.5.2",
+    "lucide-react": "^0.511.0",
+    "mapbox-gl": "^3.12.0",
+    "next": "^15.1.8",
     "pn532.js": "^0.1.18",
-    "postcss": "8.4.27",
-    "psl": "^1.9.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-components": "^6.0.7",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
+    "postcss": "8.5.3",
+    "psl": "^1.15.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "styled-components": "^6.1.18",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/client-preset": "^4.1.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
-    "@types/mapbox-gl": "^2.7.13",
-    "@types/valid-url": "^1.0.4",
-    "@types/w3c-web-serial": "^1.0.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "typescript": "^5.1.6"
+    "@graphql-codegen/cli": "^5.0.6",
+    "@graphql-codegen/client-preset": "^4.8.1",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-operations": "^4.6.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/valid-url": "^1.0.7",
+    "@types/w3c-web-serial": "^1.0.8",
+    "mini-css-extract-plugin": "^2.9.2",
+    "typescript": "^5.8.3"
   }
 }
