--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -34,7 +34,7 @@
     "eslint-config-next": "^15.1.8",
     "framer-motion": "^12.12.1",
     "graphql": "^16.11.0",
-    "graphql-ws": "5.14",
+    "graphql-ws": "^6.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.12.0",
