--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
