--- a/server/packages/frontend/package.json
+++ b/server/packages/frontend/package.json
@@ -9,6 +9,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "codegen": "graphql-codegen --config graphql.config.js"
   },
   "dependencies": {
