feat: update front-end .env.example

--- a/server/packages/frontend/.env.example
+++ b/server/packages/frontend/.env.example
@@ -4,11 +4,9 @@ NEXT_PUBLIC_DEBUG=
 # Your Mapbox API token, retrieve from https://account.mapbox.com/access-tokens/
 NEXT_PUBLIC_MAPBOX_TOKEN=
 
-# Since we cannot know where the internal network is located, you must manually
-# specify where the installation if phyiscally located.
-NEXT_PUBLIC_LOCATION_NAME="Klokgebouw, Eindhoven (NL)"
-NEXT_PUBLIC_LOCATION_LAT=51.448614
-NEXT_PUBLIC_LOCATION_LNG=5.457256
-
 # The default website placeholder that should be shown on the first terminal
 NEXT_PUBLIC_DEFAULT_WEBSITE=ddw.nl
+
+# Frontend mode configuration
+# Options: 'standalone' or 'distributed'
+NEXT_PUBLIC_MODE=standalone
