--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "All software components for the Packet Run installation that run on a server",
   "main": "",
   "scripts": {
-    "start": "concurrently \"redis-server\" \"turbo run start\"",
+    "start": "turbo run start",
     "build": "turbo build",
-    "dev": "concurrently \"redis-server\" \"turbo run dev\"",
+    "dev": "turbo run dev",
     "lint": "turbo run lint",
     "postinstall": "patch-package"
   },
@@ -19,8 +19,5 @@
     "patch-package": "^8.0.0",
     "turbo": "^2.5.3"
   },
-  "packageManager": "npm@10.8.2",
-  "devDependencies": {
-    "concurrently": "^9.1.2"
-  }
+  "packageManager": "npm@10.8.2"
 }
