--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "All software components for the Packet Run installation that run on a server",
   "main": "",
   "scripts": {
-    "start": "concurrently \"redis-server\" \"turbo run start\"",
+    "start": "turbo run start",
     "build": "turbo build",
     "dev": "concurrently \"redis-server\" \"turbo run dev\"",
     "lint": "turbo run lint",
