--- a/image/config/meta/packet-run/base.yaml
+++ b/image/config/meta/packet-run/base.yaml
@@ -15,16 +15,27 @@ mmdebstrap:
   - deb [trusted=yes] https://pkgs.tailscale.com/stable/debian bookworm main
 
   customize-hooks:
+  # Install overlayfs check script
+  - |
+    install -m 755 ./packet-run/overlayfs-check.sh $1/usr/local/bin/overlayfs-check.sh
+
+  # Create overlayfs service from template
+  - |
+    cat ./packet-run/overlayfs-check.service > $1/etc/systemd/system/overlayfs-check.service
+
   # Create tailscale service from template
   - |
     cat ./packet-run/tailscale.service.tpl | sed \
       -e "s|<SERVICE_USER>|${IGconf_device_user1}|g" \
       > $1/etc/systemd/system/tailscale.service
 
-  # Enable tailscale unit
-  - $BDEBSTRAP_HOOKS/enable-units "$1" tailscale
+  # Enable services
+  - $BDEBSTRAP_HOOKS/enable-units "$1" overlayfs-check tailscale
 
   packages:
   - nodejs
   - tailscale
   - cage
+  - vim
+  - git
+  - raspi-config
