--- a/image/config/meta/packet-run/base.yaml
+++ b/image/config/meta/packet-run/base.yaml
@@ -15,17 +15,14 @@ mmdebstrap:
   - deb [trusted=yes] https://pkgs.tailscale.com/stable/debian bookworm main
 
   customize-hooks:
+  # Create tailscale service from template
   - |
-    pwd 
-
-    # Create tailscale service from template
     cat ./packet-run/tailscale.service.tpl | sed \
       -e "s|<SERVICE_USER>|${IGconf_device_user1}|g" \
       > $1/etc/systemd/system/tailscale.service
-    
 
-    # Enable tailscale unit
-    $BDEBSTRAP_HOOKS/enable-units "$1" tailscale
+  # Enable tailscale unit
+  - $BDEBSTRAP_HOOKS/enable-units "$1" tailscale
 
   packages:
   - nodejs
