--- a/image/config/meta/packet-run/client.yaml
+++ b/image/config/meta/packet-run/client.yaml
@@ -27,5 +27,8 @@ mmdebstrap:
       -e "s|<SERVICE_USER>|${IGconf_device_user1}|g" \
       > $1/etc/systemd/system/kiosk.service
 
+  # Set proper ownership for client files
+  - chown -R ${IGconf_device_user1}:${IGconf_device_user1} $1/opt/packet-run/client
+
   # Enable services
   - $BDEBSTRAP_HOOKS/enable-units "$1" hall-sensor-server kiosk
