--- a/image/config/meta/packet-run/server.yaml
+++ b/image/config/meta/packet-run/server.yaml
@@ -6,14 +6,21 @@ mmdebstrap:
   - mkdir -p $1/opt/packet-run/
   - cp -R /opt/packet-run/server $1/opt/packet-run/
 
-    # Install server dependencies and build
+  # Install server dependencies and build
   - cd $1/opt/packet-run/server/ && PATH=$1/usr/bin:$PATH npm install && npm run build
 
-    # Create packet-run-server service from template
+  # Create packet-run-server service from template
   - |
     cat ./packet-run/packet-run-server.service.tpl | sed \
       -e "s|<SERVICE_USER>|${IGconf_device_user1}|g" \
       > $1/etc/systemd/system/packet-run-server.service
 
-  # Enable service
-  - $BDEBSTRAP_HOOKS/enable-units "$1" packet-run-server
+  # Copy server-specific overlay
+  - cp -R ./packet-run/device/server/rootfs-overlay/* $1/
+
+  # Enable services
+  - $BDEBSTRAP_HOOKS/enable-units "$1" packet-run-server isc-dhcp-server
+
+  packages:
+  - isc-dhcp-server
+  - iptables-persistent
