--- a/image/config/meta/packet-run/base.yaml
+++ b/image/config/meta/packet-run/base.yaml
@@ -15,11 +15,23 @@ mmdebstrap:
   - deb [trusted=yes] https://pkgs.tailscale.com/stable/debian bookworm main
 
   customize-hooks:
+  # Create packet_run_config.txt from template
+  - |
+    cat ./packet-run/packet_run_config.txt.tpl | sed \
+      -e "s|<PACKET_RUN_TERMINAL_ID>|${IGconf_packet_run_terminal_id}|g" \
+      -e "s|<PACKET_RUN_SERVER_IP>|${IGconf_packet_run_server_ip}|g" \
+      -e "s|<TAILSCALE_AUTH_KEY>|${IGconf_tailscale_auth_key}|g" \
+      -e "s|<TAILSCALE_LOGIN_SERVER>|${IGconf_tailscale_login_server:-https://login.tailscale.com}|g" \
+      > $1/boot/firmware/packet_run_config.txt
+
   # Create tailscale service from template
   - |
     cat ./packet-run/tailscale.service.tpl | sed \
       -e "s|<SERVICE_USER>|${IGconf_device_user1}|g" \
       > $1/etc/systemd/system/tailscale.service
+
+  # Copy common rootfs-overlay
+  - cp -R ./packet-run/image/device/rootfs-overlay/* $1/
 
   # Enable services
   - $BDEBSTRAP_HOOKS/enable-units "$1" overlayfs-check tailscale
