--- a/image/config/image/device/server/rootfs-overlay/etc/dhcp/dhcpd.conf
+++ b/image/config/image/device/server/rootfs-overlay/etc/dhcp/dhcpd.conf
@@ -1,9 +1,20 @@
-default-lease-time 600;
-max-lease-time 7200;
+# DHCP Server Configuration file.
+# see /usr/share/doc/dhcp-server/dhcpd.conf.example
+# see dhcpd.conf(5) man page
 
+# Use the new DHCP protocol
+use-host-decl-names on;
+
+# Debug settings
+log-facility local7;
+log-facility-high local7;
+
+# Define the subnet
 subnet 10.13.37.0 netmask 255.255.255.0 {
-  range 10.13.37.100 10.13.37.200;
-  option routers 10.13.37.1;
-  option domain-name-servers 8.8.8.8, 8.8.4.4;
-  option broadcast-address 10.13.37.255;
+    range 10.13.37.100 10.13.37.200;
+    option routers 10.13.37.1;
+    option domain-name-servers 9.9.9.9, 149.112.112.112;
+    option broadcast-address 10.13.37.255;
+    default-lease-time 600;
+    max-lease-time 7200;
 } 
