fix: get dns working in image

--- a/image/config/image/device/rootfs-overlay/etc/systemd/system/tailscale.service
+++ b/image/config/image/device/rootfs-overlay/etc/systemd/system/tailscale.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Tailscale VPN Service
-After=network.target network-online.target overlayfs-check.service
+After=network.target network-online.target overlayfs-check.service systemd-resolved.service
 Requires=overlayfs-check.service network-online.target
 
 [Service]
