--- a/image/config/meta/packet-run/server.yaml
+++ b/image/config/meta/packet-run/server.yaml
@@ -24,8 +24,26 @@ mmdebstrap:
     chown -R ${IGconf_device_user1}:${IGconf_device_user1} /opt/packet-run/server
     EOCHROOT
 
+  # Install Litestream
+  - |
+    chroot $1 bash -- <<- EOCHROOT
+    wget -O /tmp/litestream.deb https://github.com/benbjohnson/litestream/releases/download/v0.3.13/litestream-v0.3.13-linux-amd64.deb
+    dpkg -i /tmp/litestream.deb
+    rm /tmp/litestream.deb
+    EOCHROOT
+
+  # Configure Litestream
+  - |
+    cat ./packet-run/litestream.yaml.tpl | sed \
+      -e "s|\${litestream_access_key}|${litestream_access_key}|g" \
+      -e "s|\${litestream_access_secret}|${litestream_access_secret}|g" \
+      -e "s|\${litestream_endpoint}|${litestream_endpoint}|g" \
+      -e "s|\${litestream_bucket}|${litestream_bucket}|g" \
+      -e "s|\${litestream_region}|${litestream_region}|g" \
+      > $1/etc/litestream.yml
+
   # Enable services
-  - $BDEBSTRAP_HOOKS/enable-units "$1" packet-run-server isc-dhcp-server
+  - $BDEBSTRAP_HOOKS/enable-units "$1" packet-run-server isc-dhcp-server litestream
 
   packages:
   - isc-dhcp-server
