fix: make tailscale only wait for eth0

--- a/image/config/image/device/rootfs-overlay/etc/systemd/system/tailscale.service
+++ b/image/config/image/device/rootfs-overlay/etc/systemd/system/tailscale.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Tailscale VPN Service
-After=network.target network-online.target overlayfs-check.service systemd-resolved.service
-Requires=overlayfs-check.service network-online.target
+After=network.target systemd-networkd-wait-online@eth0.service overlayfs-check.service systemd-resolved.service
+Requires=overlayfs-check.service systemd-networkd-wait-online@eth0.service
+Before=hall-sensor-server.service kiosk.service
 
 [Service]
 Type=oneshot
