--- a/image/config/meta/packet-run/server.yaml
+++ b/image/config/meta/packet-run/server.yaml
@@ -5,6 +5,18 @@ mmdebstrap:
   # Install server dependencies and build
   - cd $1/opt/packet-run/server/ && PATH=$1/usr/bin:$PATH npm install && PATH=$1/usr/bin:$PATH NEXT_PUBLIC_MODE=distributed npm run build
 
+  # Create litestream-restore service from template
+  - |
+    cat ./packet-run/litestream-restore.service.tpl | sed \
+      -e "s|<SERVICE_USER>|${IGconf_device_user1}|g" \
+      > $1/etc/systemd/system/litestream-restore.service
+
+  # Create custom litestream service from template
+  - |
+    cat ./packet-run/litestream.service.tpl | sed \
+      -e "s|<SERVICE_USER>|${IGconf_device_user1}|g" \
+      > $1/etc/systemd/system/litestream.service
+
   # Create packet-run-server service from template
   - |
     cat ./packet-run/packet-run-server.service.tpl | sed \
@@ -33,7 +45,7 @@ mmdebstrap:
       > $1/etc/litestream.yml
 
   # Enable services
-  - $BDEBSTRAP_HOOKS/enable-units "$1" packet-run-server isc-dhcp-server litestream
+  - $BDEBSTRAP_HOOKS/enable-units "$1" litestream-restore packet-run-server isc-dhcp-server litestream
 
   # Set proper ownership for client files
   - |
