--- a/image/config/meta/packet-run/server.yaml
+++ b/image/config/meta/packet-run/server.yaml
@@ -3,7 +3,12 @@ name: packet-run-server
 mmdebstrap:
   customize-hooks:
   # Install server dependencies and build
-  - cd $1/opt/packet-run/server/ && PATH=$1/usr/bin:$PATH npm install && PATH=$1/usr/bin:$PATH NEXT_PUBLIC_MODE=distributed npm run build && PATH=$1/usr/bin:$PATH npx puppeteer browsers install chrome
+  - cd $1/opt/packet-run/server/ && PATH=$1/usr/bin:$PATH npm install && PATH=$1/usr/bin:$PATH NEXT_PUBLIC_MODE=distributed npm run build && PATH=$1/usr/bin:$PATH
+
+  # Install puppeteer Chrome and move to correct location
+  - cd $1/opt/packet-run/server/ && PATH=$1/usr/bin:$PATH npx puppeteer browsers install chrome@136.0.7103.94
+  - mkdir -p $1/home/packet-run/.cache/puppeteer/chrome/linux_arm-136.0.7103.94
+  - cp -r /home/imagegen/.cache/puppeteer/chrome/linux_arm-136.0.7103.94/chrome-linux64 $1/home/packet-run/.cache/puppeteer/chrome/linux_arm-136.0.7103.94/
 
   # Create litestream-restore service from template
   - |
@@ -59,3 +64,4 @@ mmdebstrap:
   - redis
   - retry
   - traceroute
+  - chromium
