fix: notify turbo over puppeteer executable path

--- a/server/turbo.json
+++ b/server/turbo.json
@@ -1,5 +1,6 @@
 {
     "$schema": "https://turbo.build/schema.json",
+    "globalEnv": ["PUPPETEER_EXECUTABLE_PATH"],
     "tasks": {
         "build": {
             "inputs": [
