--- a/server/packages/backend/package.json
+++ b/server/packages/backend/package.json
@@ -22,6 +22,7 @@
     "@fastify/static": "^8.2.0",
     "@fastify/websocket": "^11.0.2",
     "@ipregistry/client": "^6.0.0",
+    "@mapbox/polyline": "^1.2.1",
     "@mikro-orm/better-sqlite": "^6.4.15",
     "@mikro-orm/cli": "^6.4.15",
     "@mikro-orm/core": "^6.4.15",
@@ -54,6 +55,7 @@
     "@nestjs/schematics": "^11.0.5",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.11.29",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/node": "^22.15.21",
     "@types/ws": "^8.18.1",
     "ajv": "^8.17.1",
