fix: break up packet-run server into front-end and back-end components

--- a/image/config/image/device/rootfs-overlay/etc/systemd/system/overlayfs-check.service
+++ b/image/config/image/device/rootfs-overlay/etc/systemd/system/overlayfs-check.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Check and enable OverlayFS
-Before=tailscale.service kiosk.service packet-run-server.service hall-sensor-server.service
+Before=tailscale.service kiosk.service packet-run-frontend.service packet-run-backend.service hall-sensor-server.service
 Wants=network-online.target
 After=network-online.target
 
